Add Google Play Billing project

--- a/public/projects.html
+++ b/public/projects.html
@@ -477,6 +477,7 @@
               <li><a href="#google-tv">Google TV App Ecosystem</a></li>
               <li><a href="#android-auto">Android Auto Apps</a></li>
               <li><a href="#music-alarms">Music Alarms on Android</a></li>
+              <li><a href="#play-billing">Google Play Billing</a></li>
               <li><a href="#exposure-notifications">COVID-19 Exposure Notifications</a></li>
               <li><a href="#google-sign-in">Google Sign-In</a></li>
               <li><a href="#world-solar-challenge">World Solar Challenge</a></li>
@@ -535,6 +536,19 @@
             class="project-link">Blog Post</a>
           <div class="tags">Android Auto, Automotive, Cars, Developer Relations, Audio Streaming Apps
           </div>
+        </div>
+        <div class="card" id="play-billing">
+          <div class="image-gradient-container">
+            <img src="/i/GooglePlayBilling.jpg" alt="Google Play Billing Interface" loading="lazy">
+          </div>
+          <h2>Google Play Billing</h2>
+          <p>I wrote example code for managing in-app purchases and subscriptions on Android. I worked with Android developers 
+            during the digital boom of music, movies, and TV services as they launched apps and focused on subscription business models. 
+            The samples demonstrate best practices for implementing Google Play Billing in Java and Kotlin, including server-side 
+            subscription management and real-time developer notifications.</p>
+          <a href="https://github.com/cartland/play-billing-samples" target="_blank" rel="noopener noreferrer"
+            aria-label="View Google Play Billing samples on GitHub" class="project-link">GitHub</a>
+          <div class="tags">Android, Google Play, In-App Purchases, Subscriptions, Java, Kotlin, Developer Relations</div>
         </div>
         <div class="card" id="music-alarms">
           <div class="image-gradient-container">
