Add note about GitHub Actions

--- a/public/projects.html
+++ b/public/projects.html
@@ -715,7 +715,8 @@
           <h2>Portfolio Website</h2>
           <p>I built this portfolio website using minimal CSS and JavaScript to create a responsive and accessible
             experience. The site features a clean, modern design that works seamlessly across all devices while
-            maintaining strong accessibility standards.</p>
+            maintaining strong accessibility standards. The website is deployed using GitHub Actions and
+            hosted with Firebase Hosting on a custom domain.</p>
           <a href="https://github.com/cartland/cartland-dev" target="_blank" rel="noopener noreferrer"
             aria-label="View Portfolio Website" class="project-link">GitHub</a>
           <div class="tags">Web Development, HTML, CSS, JavaScript, CI/CD, Accessibility, Responsive Design</div>
