Add project Android Deep Links

--- a/public/projects.html
+++ b/public/projects.html
@@ -480,6 +480,7 @@
               <li><a href="#play-billing">Google Play Billing</a></li>
               <li><a href="#exposure-notifications">COVID-19 Exposure Notifications</a></li>
               <li><a href="#google-sign-in">Google Sign-In</a></li>
+              <li><a href="#android-deep-links">Android Deep Links</a></li>
               <li><a href="#world-solar-challenge">World Solar Challenge</a></li>
               <li><a href="#smart-garage">Smart Garage Door</a></li>
               <li><a href="#marauders-map">Marauder's Map</a></li>
@@ -542,24 +543,31 @@
             <img src="/i/GooglePlayBilling.jpg" alt="Google Play Billing Interface" loading="lazy">
           </div>
           <h2>Google Play Billing</h2>
-          <p>I wrote example code for managing in-app purchases and subscriptions on Android. I worked with Android developers 
-            during the digital boom of music, movies, and TV services as they launched apps and focused on subscription business models. 
-            The samples demonstrate best practices for implementing Google Play Billing in Java and Kotlin, including server-side 
+          <p>I wrote example code for managing in-app purchases and subscriptions on Android. I worked with Android
+            developers
+            during the digital boom of music, movies, and TV services as they launched apps and focused on subscription
+            business models.
+            The samples demonstrate best practices for implementing Google Play Billing in Java and Kotlin, including
+            server-side
             subscription management and real-time developer notifications.</p>
           <a href="https://github.com/cartland/play-billing-samples" target="_blank" rel="noopener noreferrer"
             aria-label="View Google Play Billing samples on GitHub" class="project-link">GitHub</a>
-          <div class="tags">Android, Google Play, In-App Purchases, Subscriptions, Java, Kotlin, Developer Relations</div>
+          <div class="tags">Android, Google Play, In-App Purchases, Subscriptions, Java, Kotlin, Developer Relations
+          </div>
         </div>
         <div class="card" id="music-alarms">
           <div class="image-gradient-container">
             <img src="/i/PandoraMusicAlarms.jpg" alt="Music Alarms on Android" loading="lazy">
           </div>
           <h2>Music Alarms on Android</h2>
-          <p>I designed the API integration for music alarms on Android, a feature that allows users to set alarms that play music
-            from their music app. The feature was launched in 2019 and enabled Pandora to integrate into the Clock app on Android.
+          <p>I designed the API integration for music alarms on Android, a feature that allows users to set alarms that
+            play music
+            from their music app. The feature was launched in 2019 and enabled Pandora to integrate into the Clock app
+            on Android.
             Pandora wrote an engineering blog post about the integration.</p>
-          <a href="https://engineering.pandora.com/wake-up-to-pandora-with-the-clock-app-from-google-7859fe7743aa" target="_blank" rel="noopener noreferrer"
-            aria-label="Read blog post about Music Alarms on Android" class="project-link">Blog Post</a>
+          <a href="https://engineering.pandora.com/wake-up-to-pandora-with-the-clock-app-from-google-7859fe7743aa"
+            target="_blank" rel="noopener noreferrer" aria-label="Read blog post about Music Alarms on Android"
+            class="project-link">Blog Post</a>
           <div class="tags">Android, Music, Developer APIs, Developer Relations</div>
         </div>
         <div class="card" id="exposure-notifications">
@@ -596,6 +604,23 @@
             aria-label="Watch Google I/O 2013 talk about Google Sign-In" class="project-link">Google I/O Talk</a>
           <div class="tags">Authentication, OAuth, Android, iOS, Web, Java, Objective-C, JavaScript, Python, Go, PHP,
             Cross-Platform Development, Public Speaking</div>
+        </div>
+        <div class="card" id="android-deep-links">
+          <div class="image-gradient-container">
+            <img src="/i/AndroidDeepLinks.jpg" alt="Android Deep Links Diagram" loading="lazy">
+          </div>
+          <h2>Android Deep Links</h2>
+          <p>I led a team that defined best practices for designing and handling deep links on Android. We created
+            comprehensive
+            documentation and educational content, including the Deep Links Crash Course, to help developers understand
+            how to
+            properly integrate their websites with Android apps. This work established standards for seamless navigation
+            between
+            web and Android platforms, improving user experience across the Android ecosystem.</p>
+          <a href="https://youtu.be/sSF_3CIXdbE" target="_blank" rel="noopener noreferrer"
+            aria-label="Watch Android Deep Links Crash Course" class="project-link">YouTube</a>
+          <div class="tags">Android, Deep Links, App Links, Developer Education, Technical Leadership, Web Integration
+          </div>
         </div>
         <div class="card" id="world-solar-challenge">
           <div class="image-gradient-container">
@@ -688,12 +713,13 @@
             <img src="/i/BerkeleyAlumni.jpg" alt="Berkeley Engineering Alumni Spotlight" loading="lazy">
           </div>
           <h2>Berkeley Alumni Spotlight</h2>
-          <p>UC Berkeley Engineering featured me in their alumni spotlight, where I shared my journey from studying AI with
+          <p>UC Berkeley Engineering featured me in their alumni spotlight, where I shared my journey from studying AI
+            with
             Professor Dan Klein to leading developer outreach at Google. I discussed how my experiences at Cal,
             including racing a solar-powered car across Australia with CalSol, shaped my approach to solving complex
             technical challenges and working with ambiguous problems.</p>
           <a href="https://engineering.berkeley.edu/christopher-cartland/" target="_blank" rel="noopener noreferrer"
-            aria-label="Read Berkeley Engineering Alumni Spotlight" class="project-link">Profile</a>
+            aria-label="Read Berkeley Engineering Alumni Spotlight" class="project-link">Berkeley Spotlight</a>
           <div class="tags">Public Speaking, Engineering Leadership</div>
         </div>
         <div class="card" id="templeton-alumni">
@@ -705,7 +731,7 @@
             In this alumni profile, I discuss my introduction to computer science and the environment at Templeton that
             helped lay the foundation for my journey into software development and my work at Google.</p>
           <a href="https://www.youtube.com/watch?v=_U_oxDDa3x8" target="_blank" rel="noopener noreferrer"
-            aria-label="Watch Templeton Alumni Profile video" class="project-link">Watch Video</a>
+            aria-label="Watch Templeton Alumni Profile video" class="project-link">YouTube</a>
           <div class="tags">Public Speaking</div>
         </div>
         <div class="card" id="portfolio">
