--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
       z-index: inherit;
     }
 
-    .header-content img {
+    .logo {
       height: 48px;
     }
 
@@ -424,7 +424,7 @@
     <header>
       <div id="header-container" class="header-container">
         <div class="header-content menu-aware">
-          <a href="/" aria-label="Home - Christopher Cartland"><img src="i/ChristopherCartlandLogo.jpg" alt="Christopher Cartland Logo"></a>
+          <a href="/" aria-label="Home - Christopher Cartland"><img class="logo" src="i/ChristopherCartlandLogo.jpg" alt="Christopher Cartland Logo"></a>
           <nav class="nav-links" aria-label="Main navigation">
             <a href="/" aria-label="About - Learn more about Christopher Cartland">
               <h2>About</h2>
