--- a/public/projects.html
+++ b/public/projects.html
@@ -296,9 +296,11 @@
     }
 
     .toc {
-      min-height: 2.2em;
-      margin-bottom: 8px;
       padding-left: 16px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      margin-top: 4px;
+      margin-bottom: 4px;
       break-inside: avoid;
       text-decoration: none;
     }
