Fix typo in Android Deep Links

--- a/public/projects.html
+++ b/public/projects.html
@@ -615,7 +615,7 @@
         <a class="toc" href="#music-alarms">Music Alarms on Android</a>
         <a class="toc" href="#exposure-notifications">COVID-19 Exposure Notifications</a>
         <a class="toc" href="#google-sign-in">Google Sign-In</a>
-        <a class="toc" href="#android-deep-links">Android Deep Link</li>
+        <a class="toc" href="#android-deep-links">Android Deep Links</li>
         <a class="toc" href="#world-solar-challenge">World Solar Challenge</a>
         <a class="toc" href="#smart-garage">Smart Garage Door</a>
         <a class="toc" href="#marauders-map">Marauder's Map</a>
