--- a/public/temperature-visualization.html
+++ b/public/temperature-visualization.html
@@ -65,9 +65,121 @@
             border-color: #007bff;
             color: #ffffff;
         }
+
+        .color-picker-container {
+            display: flex;
+            gap: 40px;
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #2a2a4a;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .color-picker {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .color-picker label {
+            font-size: 1.1em;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .slider-group {
+            display: flex;
+            flex-direction: column;
+            width: 200px;
+        }
+
+        .slider-group label {
+            font-size: 0.9em;
+            font-weight: normal;
+            margin-bottom: 2px;
+        }
+
+        .slider-group input[type="range"] {
+            width: 100%;
+            -webkit-appearance: none;
+            height: 8px;
+            border-radius: 5px;
+            background: #555;
+            outline: none;
+            opacity: 0.7;
+            transition: opacity .2s;
+        }
+
+        .slider-group input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: #007bff;
+            cursor: pointer;
+        }
+
+        .slider-group input[type="range"]::-moz-range-thumb {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: #007bff;
+            cursor: pointer;
+        }
+
+        .hex-display {
+            margin-top: 10px;
+            padding: 8px;
+            border: 1px solid #555;
+            background-color: #333;
+            color: #e0e0e0;
+            border-radius: 4px;
+            font-family: 'Courier New', Courier, monospace;
+            width: 100px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+    <div class="color-picker-container">
+        <div class="color-picker">
+            <label>Cold Color</label>
+            <div class="slider-group">
+                <label for="cold-hue">Hue:</label>
+                <input type="range" id="cold-hue" min="0" max="360" value="240">
+            </div>
+            <div class="slider-group">
+                <label for="cold-saturation">Saturation:</label>
+                <input type="range" id="cold-saturation" min="0" max="100" value="100">
+            </div>
+            <div class="slider-group">
+                <label for="cold-value">Value:</label>
+                <input type="range" id="cold-value" min="0" max="100" value="100">
+            </div>
+            <div id="cold-hex-display" class="hex-display">#0000FF</div>
+        </div>
+
+        <div class="color-picker">
+            <label>Hot Color</label>
+            <div class="slider-group">
+                <label for="hot-hue">Hue:</label>
+                <input type="range" id="hot-hue" min="0" max="360" value="0">
+            </div>
+            <div class="slider-group">
+                <label for="hot-saturation">Saturation:</label>
+                <input type="range" id="hot-saturation" min="0" max="100" value="100">
+            </div>
+            <div class="slider-group">
+                <label for="hot-value">Value:</label>
+                <input type="range" id="hot-value" min="0" max="100" value="100">
+            </div>
+            <div id="hot-hex-display" class="hex-display">#FF0000</div>
+        </div>
+    </div>
+
     <div class="mode-toggle-bar">
         <button id="temperature-mode-btn" class="active">Temperature Mode</button>
         <button id="anomaly-mode-btn">Anomaly Mode</button>
@@ -130,25 +242,74 @@
         }
 
         // Function to convert hex color to RGB
-        function hexToRgb(hex) {
-            const bigint = parseInt(hex.slice(1), 16);
-            const r = (bigint >> 16) & 255;
-            const g = (bigint >> 8) & 255;
-            const b = bigint & 255;
-            return { r, g, b };
+        // Function to convert HSL to RGB
+        function hslToRgb(h, s, l) {
+            h /= 360;
+            s /= 100;
+            l /= 100;
+            let r, g, b;
+
+            if (s === 0) {
+                r = g = b = l; // achromatic
+            } else {
+                const hue2rgb = (p, q, t) => {
+                    if (t < 0) t += 1;
+                    if (t > 1) t -= 1;
+                    if (t < 1 / 6) return p + (q - p) * 6 * t;
+                    if (t < 1 / 2) return q;
+                    if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
+                    return p;
+                };
+
+                const q = l < 0.5 ? l * (1 + s) : l + s - l * s;
+                const p = 2 * l - q;
+                r = hue2rgb(p, q, h + 1 / 3);
+                g = hue2rgb(p, q, h);
+                b = hue2rgb(p, q, h - 1 / 3);
+            }
+
+            return {
+                r: Math.round(r * 255),
+                g: Math.round(g * 255),
+                b: Math.round(b * 255)
+            };
         }
 
-        // Define the three hex colors
-        const COLOR_COLD = '#0000FF'; // Blue
-        const COLOR_MID = '#FFFFFF';  // Middle
-        const COLOR_HOT = '#FF0000';  // Red
+        // Function to convert RGB to Hex
+        function rgbToHex(r, g, b) {
+            return "#" + ((1 << 24) + (r << 16) + (g << 8) + b).toString(16).slice(1).toUpperCase();
+        }
+
+        // Initial color values from HTML
+        let coldColor = {
+            h: parseInt(document.getElementById('cold-hue').value),
+            s: parseInt(document.getElementById('cold-saturation').value),
+            v: parseInt(document.getElementById('cold-value').value)
+        };
+        let hotColor = {
+            h: parseInt(document.getElementById('hot-hue').value),
+            s: parseInt(document.getElementById('hot-saturation').value),
+            v: parseInt(document.getElementById('hot-value').value)
+        };
+
+        // Function to convert HSV to HSL (since hslToRgb expects HSL)
+        function hsvToHsl(h, s, v) {
+            s /= 100;
+            v /= 100;
+            const l = (2 - s) * v / 2;
+            const newS = l === 0 || l === 1 ? 0 : (s * v) / (l < 0.5 ? l * 2 : 2 - l * 2);
+            return { h: h, s: newS * 100, l: l * 100 };
+        }
 
         function getColorForValue(value, minVal, maxVal) {
             const normalizedValue = (value - minVal) / (maxVal - minVal);
 
-            const colorColdRgb = hexToRgb(COLOR_COLD);
-            const colorMidRgb = hexToRgb(COLOR_MID);
-            const colorHotRgb = hexToRgb(COLOR_HOT);
+            const coldHsl = hsvToHsl(coldColor.h, coldColor.s, coldColor.v);
+            const hotHsl = hsvToHsl(hotColor.h, hotColor.s, hotColor.v);
+
+            const colorColdRgb = hslToRgb(coldHsl.h, coldHsl.s, coldHsl.l);
+            const colorMidRgb = { r: 255, g: 255, b: 255 }; // White middle color
+            const colorHotRgb = hslToRgb(hotHsl.h, hotHsl.s, hotHsl.l);
 
             let r, g, b;
 
@@ -276,6 +437,41 @@
         document.addEventListener('DOMContentLoaded', () => {
             document.getElementById('temperature-mode-btn').addEventListener('click', () => renderVisualization('temperature'));
             document.getElementById('anomaly-mode-btn').addEventListener('click', () => renderVisualization('anomaly'));
+
+            // Helper function to update color and re-render
+            function updateColor(colorType) {
+                const hue = parseInt(document.getElementById(`${colorType}-hue`).value);
+                const saturation = parseInt(document.getElementById(`${colorType}-saturation`).value);
+                const value = parseInt(document.getElementById(`${colorType}-value`).value);
+
+                if (colorType === 'cold') {
+                    coldColor = { h: hue, s: saturation, v: value };
+                } else {
+                    hotColor = { h: hue, s: saturation, v: value };
+                }
+
+                const hsl = hsvToHsl(hue, saturation, value);
+                const rgb = hslToRgb(hsl.h, hsl.s, hsl.l);
+                const hex = rgbToHex(rgb.r, rgb.g, rgb.b);
+                document.getElementById(`${colorType}-hex-display`).textContent = hex;
+
+                renderVisualization(currentMode);
+            }
+
+            // Add event listeners for cold color sliders
+            document.getElementById('cold-hue').addEventListener('input', () => updateColor('cold'));
+            document.getElementById('cold-saturation').addEventListener('input', () => updateColor('cold'));
+            document.getElementById('cold-value').addEventListener('input', () => updateColor('cold'));
+
+            // Add event listeners for hot color sliders
+            document.getElementById('hot-hue').addEventListener('input', () => updateColor('hot'));
+            document.getElementById('hot-saturation').addEventListener('input', () => updateColor('hot'));
+            document.getElementById('hot-value').addEventListener('input', () => updateColor('hot'));
+
+            // Initial update of hex displays
+            updateColor('cold');
+            updateColor('hot');
+
             renderVisualization('anomaly'); // Initial render
         });
     </script>
